<resources>
    <string name="app_name">Grocerie</string>

    <!--menu button options-->
    <string name="button_view_fragments_shopping_list">View fragments shopping list</string>
    <string name="button_view_fragments_ingredients">View fragments ingredients</string>

    <!--menu actions-->
    <!--ingredient list menu-->
    <string name="action_add_dummy_data">Add dummy data</string>
    <string name="action_delete_all_entries">Delete All Ingredients</string>
    <string name="action_uncheck_all_entries">Uncheck All</string>
    <string name="action_edit_ingredient_order">Edit List Order</string>

<!--TODO:use this as category edit order string-->
    <string name="action_edit_category_order">Edit List Order</string>


    <!--editor menu-->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!--position editor menu-->
    <string name="action_done">Done</string>

    <!--shopping list menu-->
    <string name="action_clear_list">Clear all items</string>
    <string name="action_clear_picked_up_items">Clear picked up items</string>

    <!--editor layout-->
    <string name="ingredient_editor_overview">Overview</string>
    <string name="ingredient_editor_add_to_list">Add to shopping list</string>
    <string name="ingredient_editor_category">Category</string>
    <string name="hint_ingredient_name">Name</string>
    <string name="hint_ingredient_amount">Amount</string>
    <string name="hint_ingredient_unit">Units (g, mL, cups, etc.)</string>


    <!--editor action toast messages-->
    <string name="editor_insert_ingredient_failed">Error with inserting ingredient</string>
    <string name="editor_insert_ingredient_succesful">Ingredient saved</string>
    <string name="editor_update_ingredient_failed">Error with updating ingredient</string>
    <string name="editor_update_ingredient_succesful">Ingredient updated</string>
    <string name="editor_delete_ingredient_failed">Error with deleting ingredient</string>
    <string name="editor_delete_ingredient_successful">Ingredient deleted</string>

    <!--category editor action toast messages-->
    <string name="editor_insert_category_failed">Error with inserting category</string>
    <string name="editor_insert_category_succesful">Category saved</string>
    <string name="editor_update_category_failed">Error with updating category</string>
    <string name="editor_update_category_succesful">Category updated</string>
    <string name="editor_delete_category_failed">Error with deleting category</string>
    <string name="editor_delete_category_successful">Category deleted</string>

    <!--ingredient list action toast messages-->
    <string name="ingredient_list_delete_all_ingredient_failed">Error with deleting ingredients</string>
    <string name="ingredient_list_delete_all_ingredient_successful">Ingredients deleted</string>
    <string name="ingredient_list_uncheck_all_ingredient_failed">Error with unchecking ingredients</string>
    <string name="ingredient_list_uncheck_all_ingredient_successful">Unchecked all ingredients</string>

    <!--shopping list action toast messages-->
    <string name="shopping_list_clear_all_items_failed">Error with clearing all ingredients</string>
    <string name="shopping_list_clear_all_items_successful">Ingredients cleared</string>
    <string name="shopping_list_clear_picked_up_items_failed">Error with unchecking picked up ingredients</string>
    <string name="shopping_list_clear_picked_up_items_successful">Unchecked picked up ingredients</string>


    <!--user confirmation dialogs-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_ingredient_dialog_msg">Delete this ingredient?</string>
    <string name="delete_category_dialog_msg">Delete this category?</string>

    <string name="delete_all_dialog_msg">Delete all ingredients?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--activity and fragment titles-->
    <string name="ingredients_list_activity_title">My Ingredients List</string>
    <string name="categories_list_activity_title">My Categories List</string>
    <string name="shopping_list_activity_title">My Grocerie List</string>
    <string name="shopping_list_picked_up">Picked up</string>
    <string name="shopping_list_my_list">My List</string>
    <string name="editor_activity_title_new_ingredient">Add ingredient</string>
    <string name="editor_activity_title_new_category">Add category</string>
    <string name="editor_activity_title_edit_ingredient">Edit ingredient</string>
    <string name="editor_activity_title_edit_category">Edit category</string>
    <!--empty view texts-->
    <string name="empty_ingredient_list_title_text">It\'s a bit lonely here...</string>
    <string name="empty_ingredient_list_subtitle_text">Get started by adding an ingredient</string>

    <string name="empty_shopping_to_buy_list_title_text">No ingredients on your list!</string>
    <string name="empty_shopping_to_buy_list_subtitle_text">Get started by adding items from your ingredient list</string>

    <string name="empty_shopping_picked_up_list_title_text">No ingredients in your basket!</string>
    <string name="empty_shopping_picked_up_list_subtitle_text">Check off items in your Grocerie list to see them here</string>

    <string name="empty_position_editor_title_text">No ingredients in this category</string>
    <string name="empty_position_editor_subtitle_text">Add items in your ingredients list</string>

    <string name="empty_categories_list_title_text">It\'s a bit lonely here...</string>
    <string name="empty_categories_list_subtitle_text">Get started by adding a category</string>

    <!--categories-->
    <string name="fruit_and_veggie">Fruits and Veggies</string>
    <string name="meat_and_prot">Meats and Proteins</string>
    <string name="bread_and_grain">Breads and Grains</string>
    <string name="dairy">Cheeses and Dairy</string>
    <string name="frozen">Frozen</string>
    <string name="canned">Canned</string>
    <string name="drinks">Drinks</string>
    <string name="misc">Misc</string>
    <string name="snacks">Snacks</string>

    <!--For scrolling behavior in coordinator layout-->
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="app_title">Grocerie!</string>


</resources>
