<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IngredientsListLists">

    <item
        android:id="@+id/action_add_dummy_data"
        android:title="@string/action_add_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_all_entries"
        android:title="@string/action_uncheck_all_entries"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_mode"
        android:title="@string/action_edit_list_order"
        app:showAsAction="never" />

</menu>