<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngredientEditor">


    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/ingredient_editor_overview"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_ingredient_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_ingredient_name"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/hint_ingredient_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_ingredient_amount"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_ingredient_amount"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/edit_ingredient_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_ingredient_name" />

    <EditText
        android:id="@+id/edit_ingredient_unit"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_ingredient_unit"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edit_ingredient_amount"
        app:layout_constraintTop_toBottomOf="@+id/edit_ingredient_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>
